# qtmcumgr

./: .gitignore  API.cpp  API.h  ApiTypes.cpp  BluetoothConnection.cpp  BluetoothConnection.h  BluetoothDeviceManager.cpp  BluetoothDeviceManager.h  BootLoaderInfo.cpp  BootLoaderInfo.h  CMakeLists.txt  CommandEventTcpServer.cpp  CommandEventTcpServer.h  CommandProcessor.cpp  CommandProcessor.h  CommonParameters.cpp  CommonParameters.h  Connect.cpp  Connect.h  Connected.cpp  Connected.h  Connection.cpp  Connection.h  ConnectionParameters.cpp  ConnectionParameters.h  DeviceDiscovered.cpp  DeviceDiscovered.h  Disconnect.cpp  Disconnect.h  Disconnected.cpp  Disconnected.h  Discoverer.cpp  Discoverer.h  GetImages.cpp  GetImages.h  Info.plist  IoThread.cpp  IoThread.h  IoThreadManager.cpp  IoThreadManager.h  (+38 more)
.github/workflows/: cmake-multi-platform.yml
api_examples/: alreadyConnected.json  bootLoaderInfo.json  connect.json  connected.json  deviceDiscovered.json  disconnect.json  disconnected.json  getImages.json  reset.json  resetCompleted.json  serviceDiscovered.json  serviceDiscoveryFinished.json  setImage.json  uploadImage.json
api_schemas/: bootLoaderInfo.json  connect.json  deviceDiscovered.json  disconnect.json  disconnected.json  getImages.json  reset.json  serviceDiscovered.json  setImage.json  uploadImage.json
